lib_LIBRARIES = libsllp.a
libsllp_a_SOURCES = \
          binops.h md5/md5.c md5/md5.h\
          sllp.h sllp.c\
					sllp_var.h sllp_group.h sllp_curve.h sllp_func.h\
					sllp_client.h sllp_server.h\
					var.h group.h curve.h func.h defs.h server_defs.h\
					var.c group.c curve.c func.c\
					sllp_server.c sllp_client.c
include_HEADERS = sllp.h sllp_client.h sllp_server.h\
                  sllp_var.h sllp_group.h sllp_func.h sllp_curve.h

