lib_LIBRARIES = libsllp.a
libsllp_a_SOURCES = \
          md5/md5.c md5/md5.h\
          server_priv.h server_priv.c\
          sllp_priv.h\
          sllp.h sllp.c\
          client.h server.h\
          server.c client.c
otherincludedir = $(includedir)/sllp
otherinclude_HEADERS = sllp.h client.h server.h

