lib_LIBRARIES = libbsmp.a
libbsmp_a_SOURCES = \
          md5/md5.c md5/md5.h\
          server_priv.h server_priv.c\
          bsmp_priv.h\
          bsmp.h bsmp.c\
          client.h server.h\
          server.c client.c
otherincludedir = $(includedir)/bsmp
otherinclude_HEADERS = bsmp.h client.h server.h

